# gonsters_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/core/: setting.py
app/db/: base.py  influx_db.py  init_db.py  session.py
app/lib/: __init__.py  mqtt.py  redis.py
app/modules/: __init__.py
app/modules/auth/endpoint/: auth_endpoint.py
app/modules/auth/service/: __init__.py  auth_service.py
app/modules/ingest/endpoint/: ingest_endpoint.py
app/modules/ingest/schema/: __init__.py  ingest_schema.py
app/modules/ingest/service/: ingest_service.py
app/modules/machine/endpoint/: machine_endpoint.py
app/modules/machine/model/: __init__.py  machine_model.py
app/modules/machine/schema/: machine_schema.py
app/modules/machine/service/: machine_service.py
app/utils/: base_response.py  env.py  logging.py  time.py  utlis.py
tests/: conftest.py
tests/unit/: test_machine_service.py
